--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">HUB Spot Test Suite</th></tr>
-<tr><td><a href="#t0">Hub Spot regression suite</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">43,915</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Hub Spot regression suite</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">50,600</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">HUB Spot Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Hub Spot regression suite &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.qa.hubspot.tests.LoginPageTest</td><td><a href="#m0">loginTest</a></td><td rowspan="1">1589554563460</td><td rowspan="1">3781</td></tr><tr class="passedeven"><td><a href="#m1">verifyLoginPageTitleTest</a></td><td rowspan="1">1589554537990</td><td rowspan="1">98</td></tr><tr class="passedeven"><td><a href="#m2">verifysignUpLinkTest</a></td><td rowspan="1">1589554550871</td><td rowspan="1">96</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">HUB Spot Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Hub Spot regression suite &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.qa.hubspot.tests.LoginPageTest</td><td><a href="#m0">loginTest</a></td><td rowspan="1">1589641312951</td><td rowspan="1">20768</td></tr><tr class="passedeven"><td><a href="#m1">verifyLoginPageTitleTest</a></td><td rowspan="1">1589641300034</td><td rowspan="1">134</td></tr></tbody>
 </table>
 <h2>Hub Spot regression suite</h2><h3 id="m0">com.qa.hubspot.tests.LoginPageTest#loginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">com.qa.hubspot.tests.LoginPageTest#verifyLoginPageTitleTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.qa.hubspot.tests.LoginPageTest#verifysignUpLinkTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
