--- a/test-output/old/HUB Spot Test Suite/methods.html
+++ b/test-output/old/HUB Spot Test Suite/methods.html
@@ -1,22 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>HUB Spot Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f57685">  <td>20/05/15 20:25:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUP()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@2a49fe]">&gt;&gt;setUP</td> 
-<td>&nbsp;</td>  <td>main@1629759610</td>   <td></td> </tr>
-<tr bgcolor="f57685">  <td>20/05/15 20:25:37</td>   <td>13739</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:1, instance:com.qa.hubspot.tests.LoginPageTest@2a49fe]">verifyLoginPageTitleTest</td> 
-  <td>main@1629759610</td>   <td></td> </tr>
-<tr bgcolor="f57685">  <td>20/05/15 20:25:38</td>   <td>13880</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@2a49fe]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1629759610</td>   <td></td> </tr>
-<tr bgcolor="f57685">  <td>20/05/15 20:25:39</td>   <td>14814</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUP()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@2a49fe]">&gt;&gt;setUP</td> 
-<td>&nbsp;</td>  <td>main@1629759610</td>   <td></td> </tr>
-<tr bgcolor="f57685">  <td>20/05/15 20:25:50</td>   <td>26619</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifysignUpLinkTest()[pri:2, instance:com.qa.hubspot.tests.LoginPageTest@2a49fe]">verifysignUpLinkTest</td> 
-  <td>main@1629759610</td>   <td></td> </tr>
-<tr bgcolor="f57685">  <td>20/05/15 20:25:50</td>   <td>26722</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@2a49fe]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1629759610</td>   <td></td> </tr>
-<tr bgcolor="f57685">  <td>20/05/15 20:25:51</td>   <td>27613</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUP()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@2a49fe]">&gt;&gt;setUP</td> 
-<td>&nbsp;</td>  <td>main@1629759610</td>   <td></td> </tr>
-<tr bgcolor="f57685">  <td>20/05/15 20:26:03</td>   <td>39209</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.qa.hubspot.tests.LoginPageTest@2a49fe]">loginTest</td> 
-  <td>main@1629759610</td>   <td></td> </tr>
-<tr bgcolor="f57685">  <td>20/05/15 20:26:07</td>   <td>42994</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@2a49fe]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1629759610</td>   <td></td> </tr>
+<tr bgcolor="7fa3ae">  <td>20/05/16 20:31:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUP()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@3005db4a]">&gt;&gt;setUP</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Hub Spot regression suite-3@2115384498</td>   <td></td> </tr>
+<tr bgcolor="7fa3ae">  <td>20/05/16 20:31:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUP()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@3005db4a]">&gt;&gt;setUP</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Hub Spot regression suite-3@2115384498</td>   <td></td> </tr>
+<tr bgcolor="7fa3ae">  <td>20/05/16 20:31:40</td>   <td>16157</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifysignUpLinkTest()[pri:2, instance:com.qa.hubspot.tests.LoginPageTest@3005db4a]">verifysignUpLinkTest</td> 
+  <td>TestNG-test=Hub Spot regression suite-2@828487708</td>   <td></td> </tr>
+<tr bgcolor="7fa3ae">  <td>20/05/16 20:31:40</td>   <td>16157</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:1, instance:com.qa.hubspot.tests.LoginPageTest@3005db4a]">verifyLoginPageTitleTest</td> 
+  <td>TestNG-test=Hub Spot regression suite-1@54079809</td>   <td></td> </tr>
+<tr bgcolor="7fa3ae">  <td>20/05/16 20:31:40</td>   <td>16323</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@3005db4a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Hub Spot regression suite-3@2115384498</td>   <td></td> </tr>
+<tr bgcolor="7fa3ae">  <td>20/05/16 20:31:40</td>   <td>16569</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUP()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@3005db4a]">&gt;&gt;setUP</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Hub Spot regression suite-3@2115384498</td>   <td></td> </tr>
+<tr bgcolor="7fa3ae">  <td>20/05/16 20:31:52</td>   <td>29074</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.qa.hubspot.tests.LoginPageTest@3005db4a]">loginTest</td> 
+  <td>TestNG-test=Hub Spot regression suite-3@2115384498</td>   <td></td> </tr>
+<tr bgcolor="7fa3ae">  <td>20/05/16 20:32:13</td>   <td>49853</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.qa.hubspot.tests.LoginPageTest@3005db4a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Hub Spot regression suite-3@2115384498</td>   <td></td> </tr>
 </table>
